@@ -203,6 +203,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
   page restrictions
 * Make truncate function automatically consider length of '...' string,
   since length can vary by localization.
+* (bug 28242) Make redirects generated by urls containing a local interwiki
+  prefix be a 301 instead of a 302.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
